--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,3 +1,6 @@
+.crausel-link {
+    text-decoration: none;
+}
 .frame-parent1 {
     display: flex;
     flex-direction: column;
@@ -177,8 +180,10 @@
 }
 
 .crausel-details {
-    width: 260px;
-    padding: 8px;
+    width: 275px;
+    padding: 10px;
+    display: grid;
+    gap: 10px;
 }
 
 .crausel-from,
@@ -199,24 +204,32 @@
 .rating-parent {
     display: flex;
     margin-top: 10px;
+    justify-content: space-between;
+    align-items: center;
 }
-
+.rating-parent .offer-price{
+    text-decoration-line: line-through;
+}
+.location-icon{
+    height: 20px;
+    width: 20px;
+    color: #3D3DFF;
+}
+.review,
 .rating {
     display: flex;
-    padding: 5px 15px;
     justify-content: center;
     text-align: center;
-    gap: 9px;
+    gap: 5px;
     border-radius: 6px;
-    color: #E59312;
     font-size: 16px;
-    background: var(--foundation-yellow-yellow-2, #F9E5C6);
+    align-items: center;
 }
 
-.review {
+/* .review {
     font-size: 14px;
     padding: 7px 13px;
-}
+} */
 
 .crausel-day img {
     width: 20px;
