--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,18 +1,32 @@
+.scroll-link {
+  color: black;
+}
+.scroll-link:hover {
+  color: #3D3DFF;
+}
 
+
+.navbar-item {
+  text-decoration: none;
+}
 .navbar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background: #FFF;
   box-shadow: 0px 4px 4px 0px rgba(199, 199, 199, 0.25);
-  padding: 6px;
+  padding: 8px 20px 8px 20px;
   position: fixed;
   z-index: 100;
   width: 100%;
   top: 0;
   left: 0;
 }
-
+.nav-btn-log {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 .navbar ul {
   list-style: none;
   display: flex;
